@@ -187,6 +187,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12287: In ossaudiodev, check that the device isn't closed in several
+  methods.
+
 - Issue #12009: Fixed regression in netrc file comment handling.
 
 - Issue #12246: Warn and fail when trying to install a third-party project from
